@@ -736,8 +736,8 @@
 		gtag('config', 'UA-38524928-4');
 	</script>
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-46207169-2"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0RS08406WF"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
@@ -746,7 +746,7 @@
 		}
 		gtag('js', new Date());
 
-		gtag('config', 'UA-46207169-2');
+		gtag('config', 'G-0RS08406WF');
 	</script>
 
 </html>
